Add CSRF Token for login correlation
